[package]
name = "rusty-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
tokio = {version="1.32.0",features=["full"]}
url = "2.4.0"
cargo_toml = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
russh = "0.37.0"
anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.28"
russh-keys = "0.37.1"
