[package]
name = "rusty-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
tokio = {version="1.32.0",features=["full"]}
url = "2.4.0"
cargo_toml = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.28"
russh-keys = "0.38.0"
dirs = "5.0.1"
toml = "0.7.8"
once_cell = "1.18.0"
simple_logger = "4.2.0"
russh = "0.38.0"
log = "0.4.20"
serde_json = "1.0.106"
